tests/paczka1/fuzzy1/32539315.err
Error in line 12: mRKo0Yr4 A464 16,0
Error in line 14: 8kJQ S765 20,78
Error in line 20: 1xCyVoE S661 52,3
Error in line 8: dsFWj2Wvc S765 374,4
Error in line 19: 8kJQ S765 18,0
Error in line 26: dsFWj2Wvc S661 60,3
Error in line 29: dsFWj2Wvc A464 36,9
Error in line 31: dsFWj2Wvc S661 91,8
Error in line 32: mRKo0Yr4 S661 61,4
